infra/k8s/overlays/prod/patch-frontend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visioncount-frontend
spec:
  replicas: 2
