infra/k8s/overlays/prod/patch-redpanda-prod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redpanda
spec:
  replicas: 1
